# berusky

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  berusky.prj  berusky.pws  config.h  config.h.in  config.status  configure  configure.in  libtool
data/: Makefile.am  Makefile.in  berusky.ini
data/GameData/: COPYING  file_id.diz
data/Graphics/: back1.spr  back2.spr  back3.spr  back4.spr  background1.spr  background3.spr  box_bright1.spr  box_paper1.spr  controls.spr  end1.spr  floor_elevators1.spr  floor_gray1.spr  floor_iron_2.spr  font0.spr  font0.tab  font1.spr  game_cur.spr  global1.spr  global2.spr  global3.spr  global4.spr  herni1.spr  herni2.spr  hraci2.spr  hraci3.spr  hraci4.spr  klasik1.spr  klasik2.spr  klasik4.spr  kyber1.spr  kyber4.spr  light_box1.spr  mask2.spr  menu2.spr  menu4.spr  menu5.spr  menu6.spr  menu_back.spr  menu_back1.spr  menu_back3.spr  (+12 more)
data/Icon/: berusky.desktop
data/Levels/: j01.lv3  j02.lv3  j03.lv3  j04.lv3  j05.lv3  j06.lv3  j07.lv3  j08.lv3  j09.lv3  j10.lv3  j11.lv3  (+109 more)
src/: 2d_graph.cpp  2d_graph.h  Makefile.am  Makefile.in  animation.cpp  animation.h  berusky.cpp  berusky.h  berusky.ini  berusky_gui.cpp  berusky_gui.h  data_parser.cpp  data_parser.h  data_parser_tables.cpp  data_parser_tables.h  defines.h  editor.cpp  editor.h  events.cpp  events.h  game_logic.cpp  game_logic.h  graphics.cpp  graphics.h  gui.cpp  gui.h  ini.cpp  ini.h  input.cpp  input.h  level.cpp  level.h  level_active.cpp  level_active.h  level_changer.cpp  level_changer.h  level_game.cpp  level_game.h  llist.h  main.cpp  (+8 more)
(+41 files in other folders)
