## Process this file with automake to produce Makefile.in

## Created by Anjuta - will be overwritten
## If you don't want it to overwrite it,
## 	Please disable it in the Anjuta project configuration

INCLUDES = \
	$(PACKAGE_CFLAGS)

AM_CXXFLAGS =\
	-Wall -Wint-to-pointer-cast\
	 -g

bin_PROGRAMS = berusky

berusky_SOURCES = \
	2d_graph.cpp\
	2d_graph.h\
	animation.cpp\
	animation.h\
	berusky.cpp\
	berusky.h\
	data_parser.cpp\
	data_parser.h\
	defines.h\
	editor.cpp\
	editor.h\
	events.cpp\
	events.h\
	game_logic.cpp\
	game_logic.h\
	graphics.cpp\
	graphics.h\
	ini.cpp\
	ini.h\
	input.cpp\
	input.h\
	level.cpp\
	level.h\
	level_active.cpp\
	level_active.h\
	level_changer.cpp\
	level_changer.h\
	level_game.cpp\
	level_game.h\
	types.h\
	utils.cpp\
	utils.h\
	data_parser_tables.cpp\
	data_parser_tables.h\
	berusky_gui.cpp\
	berusky_gui.h\
	main.cpp\
	main.h\
	stack.h\
	gui.cpp\
	gui.h\
	portability.h\
	profile.cpp\
	profile.h\
	llist.h

berusky_LDFLAGS = 

berusky_LDADD =  \
	$(PACKAGE_LIBS)\
	 -lSDL -lSDL_image

